Revision history for MooseX-Workers
   Full history: https://github.com/jhannah/moosex-workers

{{$NEXT}}

0.20 2013-04-27 00:34:18
  - fix another test on Win32

0.19 2013-04-25 07:55:52
  - tests pass on Win32, one fixed, one skipped

0.18 2013-04-17 13:36:15
  - tell PAUSE not to index doc/

0.17 2013-04-17 13:21:35
  - convert dist to Dist::Zilla
  - add worker_finished with correct num_workers/has_workers state, deprecate
    worker_done

0.16 2011-02-22 
  - CPAN testers looks happy so pushing as 0.16.

0.15_01 2011-02-18 arcanez
  - no indirect
  - make POE::Filter::Reference print work
  - fix some POE issues, RT#54805
  - fix typos

0.15 2011-02-01
  - CPAN testers looks happy so pushing as 0.15.

0.14_01 2011-02-01 David K. Storrs
  - MXW now saves its ctor-time params so they can be passed on to Engine later 

0.14 2010-11-16
  - Oops. DateTime is a new dep from David's new test.

0.13 2010-11-15
  - 2010-11-12 David K. Storrs (github.com/dstorrs)
    Added POE::Filter::Reference support.
    Added more tests
  - 2010-05-19 Neil Stott
    $^O eq 'MSWin32' test patches to try to make Windows happy. 

0.12  2010-03-05 jhannah
   - 0.11_01 is testing well. Pushing as 0.12.

0.11_01  2010-03-03 pmooney, dec, jhannah
   - pmooney added get_worker_ids, the ability to trap SIG TERM, demo
   - dec wrote a generic signal handler instead of TERM-only.
   - jhannah wrote t/20.worker.SIG.TERM.t, showing sig_TERM() in action.
   - jhannah tried to write tests for MooseX/Workers/Engine/PreforkPoe.pm (we had none),
     but couldn't seem to get it to work. So apparently this was an experiment that never
     got fully off the ground. Removed.
   - dec Added an alias to MooseX::Workers::Engine to stop its POE::Session from being 
     terminated early.

0.11  2010-02-18 arcanez
   - 0.10_01 is testing well. Pushing as 0.11.

0.10_01  2010-02-18 arcanez
   - Oops. We left MooseX::AttributeHelpers in t/02.wheel.t, making some testers fail.