@@ -11,9 +11,13 @@ authority        = cpan:PERIGRIN
 github_user      = jhannah
 install_command  = cpanm .
 no_AutoPrereq    = 1
+use_MakeMaker    = 0
 
 [AutoPrereqs]
 skip = ^ManagerRole$
+skip = ^Win32::
 
 [MetaNoIndex]
 dir = doc
+
+[=inc::MooseXWorkersMaker / MooseXWorkersMaker]
