@@ -41,5 +41,5 @@ use lib qw(lib);
 }
 
 my $m = Manager->new();
-$m->run_command( sub { if ($^O eq 'MSWin32') { binmode STDOUT; binmode STDERR; } print "HELLO\n"; print STDERR "WORLD\n" } );
+$m->run_command( sub { print "HELLO\n"; print STDERR "WORLD\n" } );
 POE::Kernel->run();
