@@ -16,12 +16,14 @@ use strict;
     }
 
     sub worker_stdout {
-        my ( $self, $output, $wheel ) = @_;
+        my ( $self, $output, $job ) = @_;
+        my $wheel = $job->ID;
         ::is( $output, "HELLO $wheel", "STDOUT $wheel" );
     }
 
     sub worker_stderr {
-        my ( $self, $output, $wheel ) = @_;
+        my ( $self, $output, $job ) = @_;
+        my $wheel = $job->ID;
         ::is( $output, "WORLD $wheel", "STDERR $wheel" );
     }
 
@@ -51,10 +53,6 @@ use strict;
     sub run { 
         for my $num (1..50) {
             $_[0]->enqueue( sub {
-                if ($^O eq 'MSWin32') {
-                    binmode STDOUT;
-                    binmode STDERR;
-                } 
                 print "HELLO $num\n"; 
                 print STDERR "WORLD $num\n"; 
             } );
