@@ -56,7 +56,7 @@ use strict;
     sub run { 
         my $job = MooseX::Workers::Job->new(
             timeout => 10,
-            command => sub { if ($^O eq 'MSWin32') { binmode STDOUT; binmode STDERR; } print "HELLO\n"; print STDERR "WORLD\n"; },
+            command => sub { print "HELLO\n"; print STDERR "WORLD\n"; },
         );
         $_[0]->run_command( $job );
         POE::Kernel->run();
