@@ -2,6 +2,9 @@ Revision history for MooseX-Workers
    Full history: https://github.com/jhannah/moosex-workers
 
 {{$NEXT}}
+  - much better compatibility with Win32
+  - wrap non-job workers in an anon job (which stringifies/numifies to wheel ID
+    for backcompat)
 
 0.20 2013-04-27 00:34:18
   - fix another test on Win32
